# ro-soku

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  format-type.md
.github/workflows/: cron-test.yaml  release.yaml  unit-test.yaml
data/: intervals.json  market-types.json
scripts/: install.ps1  install.sh  integration-test.sh  unit-test.sh
scripts/exchanges/binance/: perpetual.sh  spot.sh
scripts/exchanges/bitbank/: spot.sh
scripts/exchanges/bitmex/: perpetual.sh
scripts/exchanges/bybit/: perpetual.sh  spot.sh
scripts/exchanges/okx/: perpetual.sh  spot.sh
src/: args.rs  error.rs  exchange.rs  format.rs  formatter.rs  guide.rs  main.rs  order.rs  output.rs  pick.rs  types.rs  unit.rs
src/data/: intervals.json
src/exchange/: binance.rs  bitbank.rs  bitmex.rs  bybit.rs  kraken.rs  okx.rs
