[package]
name = "ro-soku"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
chrono-tz = "0.8.1"
hex = "0.4.3"
once_cell = "1.17.1"
regex = "1.7.3"
reqwest = "0.11.16"
serde = "1.0.136"
serde_json = "1.0.94"
sha2 = "0.10.6"
thiserror = "1.0.40"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json"] }
